--- a/app.yaml
+++ b/app.yaml
@@ -1,5 +1,4 @@
-command: ["npx", "concurrently", "npm:run dev:node", "python app.py"]
-
+command: ["uvicorn", "backend.app:app"]
 env:
   - name: "DATABRICKS_WAREHOUSE_ID"
     valueFrom: "sql_warehouse"
