--- a/package.json
+++ b/package.json
@@ -9,6 +9,13 @@
   },
   "dependencies": {
     "concurrently": "^8.2.2"
+  }, 
+   "devDependencies": {
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
+    "@vitejs/plugin-react": "^4.2.0",
+    "typescript": "^5.0.0",
+    "vite": "^5.0.0"
   },
   "engines": {
     "node": ">=18.0.0",
