--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "dev": "vite frontend"
   },
   "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "concurrently": "^8.2.2"
-  }, 
+  },
    "devDependencies": {
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
