--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "concurrently": "^8.2.2"
+    "concurrently": "^8.2.2",
+    "react-hot-toast": "^2.4.1"
   },
    "devDependencies": {
     "@types/react": "^18.2.0",
