--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "concurrently": "^8.2.2",
-    "react-hot-toast": "^2.4.1"
+    "react-hot-toast": "^2.4.1",
+    "yaml": "^2.2.2"
   },
    "devDependencies": {
     "@types/react": "^18.2.0",
