--- a/package.json
+++ b/package.json
@@ -7,14 +7,14 @@
     "build:frontend": "vite build frontend --emptyOutDir",
     "dev": "vite frontend"
   },
-  "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "concurrently": "^8.2.2",
-    "react-hot-toast": "^2.4.1",
-    "yaml": "^2.2.2",
-    "monaco-editor/react": "^0.44.0"
-  },
+"dependencies": {
+  "react": "^18.2.0",
+  "react-dom": "^18.2.0",
+  "concurrently": "^8.2.2",
+  "react-hot-toast": "^2.4.1",
+  "yaml": "^2.2.2",
+  "@monaco-editor/react": "^4.6.0"
+},
    "devDependencies": {
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
