--- a/package.json
+++ b/package.json
@@ -8,12 +8,16 @@
     "dev": "vite frontend"
   },
 "dependencies": {
-  "react": "^18.2.0",
-  "react-dom": "^18.2.0",
-  "concurrently": "^8.2.2",
-  "react-hot-toast": "^2.4.1",
-  "yaml": "^2.2.2",
-  "@monaco-editor/react": "^4.6.0"
+  "@faker-js/faker": "^9.9.0",
+  "@monaco-editor/react": "^4.7.0",
+  "@types/fs-extra": "^11.0.4",
+  "axios": "^1.10.0",
+  "fs-extra": "^11.3.0",
+  "moment": "^2.30.1",
+  "react": "^19.1.0",
+  "react-dom": "^19.1.0",
+  "react-hot-toast": "^2.5.2",
+  "yaml": "^2.8.0"
 },
    "devDependencies": {
     "@types/react": "^18.2.0",
