--- a/app.yaml
+++ b/app.yaml
@@ -1,4 +1,4 @@
-command: ["gunicorn", "backend.main:app"]
+command: ["gunicorn", "backend.app:app"]
 env:
   - name: "DATABRICKS_WAREHOUSE_ID"
     valueFrom: "sql_warehouse"
