--- a/package.json
+++ b/package.json
@@ -1,36 +1,25 @@
 {
-  "name": "data-generator-app",
+  "name": "nodejs-fastapi-hello-world-app",
   "version": "1.0.0",
-  "description": "Data Generator - Full Stack Databricks App",
+  "description": "A simple Node.js + FastAPI hello world app for Databricks Apps",
+  "private": true,
+  "type": "module",
   "scripts": {
     "build": "npm run build:frontend",
     "build:frontend": "vite build frontend --emptyOutDir",
     "dev": "vite frontend"
   },
-"dependencies": {
-  "@faker-js/faker": "^9.9.0",
-  "@monaco-editor/react": "^4.7.0",
-  "@types/fs-extra": "^11.0.4",
-  "axios": "^1.10.0",
-  "fs-extra": "^11.3.0",
-  "moment": "^2.30.1",
-  "react": "^19.1.0",
-  "react-dom": "^19.1.0",
-  "react-hot-toast": "^2.5.2",
-  "yaml": "^2.8.0"
-},
-   "devDependencies": {
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "chart.js": "^4.4.0",
+    "react-chartjs-2": "^5.2.0"
+  },
+  "devDependencies": {
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "@vitejs/plugin-react": "^4.2.0",
     "typescript": "^5.0.0",
     "vite": "^5.0.0"
-  },
-  "engines": {
-    "node": ">=18.0.0",
-    "npm": ">=8.0.0"
-  },
-  "keywords": ["databricks", "sql", "generator", "react", "flask", "python"],
-  "author": "Data Generator Team",
-  "license": "MIT"
-}
+  }
+} 
